--- a/Dockerfile.debug
+++ b/Dockerfile.debug
@@ -1,5 +1,18 @@
+# === RUNTIME DEPENDENCIES IMAGE ===
+FROM alpine:3.18 as runtime-deps
+USER root
+WORKDIR /asn1_codec
+VOLUME ["/asn1_codec_share"]
+
+# add runtime dependencies
+RUN apk add --upgrade --no-cache \
+    bash \
+    librdkafka \
+    librdkafka-dev
+
+
 # === BUILDER IMAGE ===
-FROM alpine:3.18 as builder
+FROM runtime-deps as builder
 USER root
 WORKDIR /asn1_codec
 VOLUME ["/asn1_codec_share"]
@@ -9,9 +22,6 @@ RUN apk add --upgrade --no-cache --virtual .build-deps \
     cmake \
     g++ \
     make \
-    bash \
-    librdkafka \
-    librdkafka-dev \
     asio-dev
 
 # Install pugixml
@@ -22,8 +32,6 @@ RUN cd /asn1_codec/pugixml && mkdir -p build && cd build && cmake .. && make && 
 RUN export LD_LIBRARY_PATH=/usr/local/lib
 ADD ./asn1c_combined /asn1_codec/asn1c_combined
 RUN cd /asn1_codec/asn1c_combined && bash doIt.sh
-
-
 
 # Remove any lingering .asn files
 RUN rm -rf /asn1c_codec/asn1c_combined/j2735-asn-files
@@ -53,19 +61,11 @@ RUN echo "export CC=gcc" >> ~/.bashrc
 RUN mkdir -p /build && cd /build && cmake /asn1_codec && make
 
 
-
-
 # === RUNTIME IMAGE ===
-FROM alpine:3.18
+FROM runtime-deps
 USER root
 WORKDIR /asn1_codec
 VOLUME ["/asn1_codec_share"]
-
-# add runtime dependencies
-RUN apk add --upgrade --no-cache \
-    bash \
-    librdkafka \
-    librdkafka-dev
 
 # Use jemalloc
 RUN apk add --upgrade --no-cache jemalloc
