--- a/Dockerfile.standalone
+++ b/Dockerfile.standalone
@@ -1,5 +1,18 @@
+# === RUNTIME DEPENDENCIES IMAGE ===
+FROM alpine:3.18 as runtime-deps
+USER root
+WORKDIR /asn1_codec
+VOLUME ["/asn1_codec_share"]
+
+# add runtime dependencies
+RUN apk add --upgrade --no-cache \
+    bash \
+    librdkafka \
+    librdkafka-dev
+
+
 # === BUILDER IMAGE ===
-FROM alpine:3.18 as builder
+FROM runtime-deps as builder
 USER root
 WORKDIR /asn1_codec
 
@@ -8,9 +21,6 @@ RUN apk add --upgrade --no-cache --virtual .build-deps \
     cmake \
     g++ \
     make \
-    bash \
-    librdkafka \
-    librdkafka-dev \
     asio-dev
 
 # Install pugixml
@@ -43,16 +53,11 @@ ADD ./data /asn1_codec/data
 # Build acm.
 RUN mkdir -p /build && cd /build && cmake /asn1_codec && make
 
+
 # === RUNTIME IMAGE ===
-FROM alpine:3.18
+FROM runtime-deps
 USER root
 WORKDIR /asn1_codec
-
-# add runtime dependencies
-RUN apk add --upgrade --no-cache \
-    bash \
-    librdkafka \
-    librdkafka-dev
 
 # Use jemalloc
 RUN apk add --upgrade --no-cache jemalloc
