--- a/Dockerfile.testing
+++ b/Dockerfile.testing
@@ -1,5 +1,19 @@
+# === RUNTIME DEPENDENCIES IMAGE ===
+FROM alpine:3.18 as runtime-deps
+USER root
+WORKDIR /asn1_codec
+VOLUME ["/asn1_codec_share"]
+
+# add runtime dependencies
+RUN apk add --upgrade --no-cache \
+    bash \
+    python3 \
+    librdkafka \
+    librdkafka-dev
+
+
 # === BUILDER IMAGE ===
-FROM alpine:3.18 as builder
+FROM runtime-deps as builder
 USER root
 WORKDIR /asn1_codec
 VOLUME ["/asn1_codec_share"]
@@ -9,9 +23,6 @@ RUN apk add --upgrade --no-cache --virtual .build-deps \
     cmake \
     g++ \
     make \
-    bash \
-    librdkafka \
-    librdkafka-dev \
     asio-dev
 
 # Install pugixml
@@ -52,17 +63,10 @@ RUN echo "export CC=gcc" >> ~/.bashrc
 RUN mkdir -p /build && cd /build && cmake /asn1_codec && make
 
 # === RUNTIME IMAGE ===
-FROM alpine:3.18
+FROM runtime-deps
 USER root
 WORKDIR /asn1_codec
 VOLUME ["/asn1_codec_share"]
-
-# add runtime dependencies
-RUN apk add --upgrade --no-cache \
-    bash \
-    python3 \
-    librdkafka \
-    librdkafka-dev
 
 # Use jemalloc
 RUN apk add --upgrade --no-cache jemalloc
