--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ asn1c_combined/libasncodec.a
 # Ignore files added by CLion
 .idea/
 cmake-build-*/
+
+# Ignore Python bytecode files (generated during `do_kafka_test.sh` execution)
+*.pyc
